# markdown-snippet-formatter

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  requirements.txt  setup.cfg
markdown_snippet_formatter/: format_sql_python_in_md.py  formatter.py
markdown_snippets_formatter/: markdown_snippets_formatter.py
