[metadata]
name = markdown_snippets_formatter
version = 0.0.1
description = Formatting markdown fenced code snippets with black & sqlfluff.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jszafran/markdown-snippet-formatter
author = Jakub Szafran
author_email = jszafran.pv@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.11
install_requires =
    black>=23.3.0
    sqlfluff>=2.0.5

[options.entry_points]
console_scripts =
    format-markdown-code-snippets = markdown_snippets_formatter.markdown_snippets_formatter:main
